# Osixr

./: .dockerignore  CODE_OF_CONDUCT.md  COPYING  COPYING.lesser  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: SECURITY.md
src/osixr/: __init__.py  cli.py  forward.py  main.py
src/osixr/Banners/: __init__.py  banners.py  helper.py  progress.py  utils.py
src/osixr/Exif/: __init__.py
src/osixr/Exif/core/: __init__.py  jpeg_reader.py  photo_info.py  tiff_parser.py
src/osixr/Exif/utils/: mapping.py  tags.py
src/osixr/IP/: __init__.py  detector.py  utails.py
